# Cloud-Control

./: README.md  can the nethwork handle a txt file.txt  pip.cpp
andrew/lcd_and_dust/: clojure_example.clj
andrew/lcd_and_dust/testall/: .cproject  .project  testall.launch
andrew/lcd_and_dust/testall/Debug/: testall
andrew/lcd_and_dust/testall/src/: testall.cpp
hans/: TemperatureMRAA.cpp
hans/TemperatureMRAA/: CMakeLists.txt
hans/TemperatureMRAA/cmake/Toolchains/: cross.cmake
hans/TemperatureMRAA/src/: ClientSocket.cpp  ClientSocket.h  Socket.cpp  Socket.h  SocketException.h  TemperatureMRAA.cpp
ppetrov/: CMakeLists.txt  Makefile  Makefile.bak  pip.cpp  readGasSensor.c  readSensor.c
ppetrov/src/: blinkLed.c
ray/myfirstblink/: .cproject  .project  README.md  myfirstblink.launch
ray/myfirstblink/src/: DHT.cpp  DHT.h  myfirstblink.cpp
